add self-links to about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -57,20 +57,35 @@
 	</nav>
 
 	<main>
-		<h2>About</h2>
+		<h2 id=about>
+			<a href="#about" class="self-link"></a>
+			About
+		</h2>
 		<section>
-			<h3>NostraDavid, the author</h3>
+			<h3 id=nostradavid>
+				<a href="#nostradavid" class="self-link"></a>
+				NostraDavid, the author
+			</h3>
 			<p>I'm someone who's sick of the state of the web and you know what they say: </p>
 			<blockquote>Improve the world, start with yourself - <a href="https://nl.wikipedia.org/wiki/Bond_zonder_Naam">Bond
 					Zonder Naam</a></blockquote>
 			<p>This is why I started with the basics: HTML, CSS and JS. Anything else is deemed <i>bloat</i></p>
 		</section>
 		<section>
-			<h3>Thaumatorium</h3>
-			<h4>The name</h4>
+			<h3 id=thaumatorium>
+				<a href="#thaumatorium" class="self-link"></a>
+				Thaumatorium
+			</h3>
+			<h4 id=name>
+				<a href="#name" class="self-link"></a>
+				The name
+			</h4>
 			<p>It's based on the word <i>thaumaturge</i>, meaning <i>miracle worker</i>, thus <em>Thaumatorium</em> is where
 				miracles are performed.</p>
-			<h4>The reason - the why</h4>
+			<h4 id=reason>
+				<a href="#reason" class="self-link"></a>
+				The reason - the why
+			</h4>
 			<p>I wanted a place where I could post my articles, but I found my free <a
 					href="https://thaumatorium.wordpress.com/">Wordpress site</a> too slow, too bloated, too messy, so I started
 				to search for a way to still create and host articles, without needing bloat like Wordpress.</p>
@@ -95,7 +110,10 @@
 			<p>In the end I decided in writing just separate HTML pages, which means I have a bunch of duplicate HTML, but
 				I'm OK with that, as I know enough R<sup>E</sup>G<sub>E</sub>X to edit <em>all</em> HTML headers in one fell
 				swoop!</p>
-			<h4>What else</h4>
+			<h4 id=what-else>
+				<a href="#what-else" class="self-link"></a>
+				What else
+			</h4>
 			<p>I'm pretty fucking sick of all the political bullshit/polarisation I see online, so miss me with that shit.
 			</p>
 			<p>That is why on my future news aggregator I'm completely forbidding that bullshit.</p>
@@ -130,7 +148,10 @@
 				stay in the trashheap that is sociology. I'll fucking yeet you from my site if you pull that shit on people
 				too.</p>
 			<p>PPS: Right-wingers may now start to get the idea I'm /their guy/. I'm not. Stop being obnoxious retards.</p>
-			<h4>The cure</h4>
+			<h4 id=the-cure>
+				<a href="#the-cure" class="self-link"></a>
+				The cure
+			</h4>
 			<p><q>Great minds discuss ideas, average minds discuss events, small minds discuss people.</q> &ndash; Eleanor
 				Roosevelt</p>
 			<p>We (the internet at large) are too busy with discussing people, not even events. I want to see the internet
