fix images src attr value

--- a/pages/experimentations.html
+++ b/pages/experimentations.html
@@ -242,15 +242,15 @@
 				}
 			</style>
 			<p>smooth</p>
-			<img class=s src=images/wc1.png width=640 />
+			<img class=s src=/images/wc1.png width=640 />
 			<p>high-quality</p>
-			<img class=hq src=images/wc2.png width=640 />
+			<img class=hq src=/images/wc2.png width=640 />
 			<p>crisp-edges - this looks broken :(</p>
-			<img class=ce src=images/wc3.png width=640 />
+			<img class=ce src=/images/wc3.png width=640 />
 			<p>pixelated</p>
-			<img class=pi src=images/wc4.png width=640 />
+			<img class=pi src=/images/wc4.png width=640 />
 			<p>default</p>
-			<img src=images/wc5.png width=640 />
+			<img src=/images/wc5.png width=640 />
 		</section>
 		<section>
 			<h3>font weirdness</h3>
