remove quotes around src

--- a/pages/code-of-conduct.html
+++ b/pages/code-of-conduct.html
@@ -59,7 +59,7 @@
 	<main>
 		<section>
 			<h2>Code of Conduct</h2>
-			<img src="/images/conduct.webp" alt="the Code of Conduct for this site">
+			<img src=/images/conduct.webp alt="the Code of Conduct for this site">
 		</section>
 	</main>
 
