add AdSense script to the root

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name="twitter:image" content="https://thaumatorium.com/images/opengraph-cover.png?v=1">
 	<meta name="twitter:image:width" content="1280" />
 	<meta name="twitter:image:height" content="668" />
+
+	<script data-ad-client="ca-pub-7577528621475749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
