--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+					<li><time>2020-07-13</time> move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</li>
 					<li><time>2020-07-07</time> Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code>
 						to basically all headers.</li>
 					<li><time>2020-07-07</time> Spread the OGP and Twitter card metadata around the other html files</li>
