--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 							href="https://www.ko-fi.com/img/githubbutton_sm.svg">Ko-fi provided</a>,<br> but optimized AF. Why do you
 						ask?</figcaption>
 				</figure>
+
+				<figure style="display: inline-block">
+					<h3>Want to use the same style of comments for your site?</h3>
+					Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!
+				</figure>
 			</section>
 			<section>
 				<hr>
