add nav link for Hardware page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -54,6 +54,8 @@
 		<span> - </span>
 		<a href=/pages/random-video.html>Random video</a>
 		<span> - </span>
+		<a href=/pages/hardware.html>Hardware</a>
+		<span> - </span>
 		<a href=/pages/about.html>About</a>
 	</nav>
 
