--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<span> - </span>
 		<a href=/pages/random-video.html>Random video</a>
 		<span> - </span>
+		<a href=/pages/hardware.html>Hardware</a>
+		<span> - </span>
 		<a href=/pages/about.html>About</a>
 	</nav>
 
