--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -78,7 +78,7 @@
 					<p>Selene (named after the moon) was my old PC and currently functions as backup server (even though it's an old desktop PC)</p>
 					<p>I used to play games on this machine, but it got <em>very</em> frustrating as PUBG (which I played at the time) ran terrible, even on low settings, as the devs kept adding effects which I couldn't disable.</p>
 					<h2>Hyperion (2016)</h2>
-					<p>My current laptop! I bought this one at the start of my bachelor education and it has served me well!</p>
+					<p>Hyperion (named after the sun) is my current laptop and I bought it one at the start of my Bachelor's (HBO, for the Duchies) and it has served me well!</p>
 					<p>Right now it serves as third monitor and is being controlled by Zeus' keyboard and mouse, via a program called <a href="https://github.com/debauchee/barrier#barrier">Barrier</a>, as Synergy turned into a paid product a few years ago</p>
 					<p>It's an <a href="https://tweakers.net/pricewatch/484153/asus-zenbook-pro-ux501vw-fj024t/specificaties/">Asus Zenbook Pro UX501VW-FJ024T</a> - you can find more under Zenbook UX501VW, but FJ024T is the specific one I have.</p>
 					<p><strong>Protip 1:</strong> a 2160p (4k) monitor is too small for 16". Yes, it's very sharp, but the 1 meter distance removes the benefit of such a resolution. 1440p would probably be a sweet spot, as 1080p can be pixely.</p>
