add title ids (and links) for each Computer; remove depreciated elements
deleted elements are a <header> and <div> that I was going to use to put everything in columns, but I decided against that - it looked weird, as a style.

--- a/pages/hardware.html
+++ b/pages/hardware.html
@@ -68,153 +68,158 @@
 				<a href="#hardware" class="self-link"></a>
 				Hardware
 			</h2>
-			<div class="column">
-				<header>
-					<h1>PC</h1>
-					<h2>Zeus (2019)</h2>
-					<p>Zeus (the strongest of gods) is my current computer and main machine.</p>
-					<p>I currently use it for programming this site and playing vidya gaems.</p>
-					<table>
-						<thead>
-							<tr>
-								<th>Attributes
-								<th>Zeus
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>CPU
-								<td>8700k
-							<tr>
-								<td>Cooler
-								<td>Noctua NH-D15
-							<tr>
-								<td>GPU
-								<td>Nvidia 1070 Ti
-							<tr>
-								<td>MB
-								<td>Asus ROG Maximus X Hero
-							<tr>
-								<td>RAM
-								<td>16 GB, G.Skill Trident Z RGB F4-4133C17D-16GTZR
-							<tr>
-								<td>PSU
-								<td>1000 Watt
-							<tr>
-								<td>Case
-								<td>Fractal Design Define R6 Tempered Glass Black
-							<tr>
-								<td>SSD
-								<td>Samsung 960 (512 GB, 1516 MB/s read, 1307 MB/s write)
-							<tr>
-								<td>OS
-								<td>Windows 10 Pro
-						</tbody>
-					</table>
-					<h2>Selene (2013)</h2>
-					<p>Selene (named after the moon) was my old PC and currently functions as backup server (even though it's an
-						old desktop PC)</p>
-					<p>I used to play games on this machine, but it got <em>very</em> frustrating as PUBG (which I played at the
-						time) ran terrible, even on low settings, as the devs kept adding effects which I couldn't disable.</p>
-						<table>
-							<thead>
-								<tr>
-									<th>Attributes
-									<th>Selene
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>CPU
-									<td>FX-8320E
-								<tr>
-									<td>Cooler
-									<td>Cooler Master Hyper 212 Black Edition
-								<tr>
-									<td>GPU
-									<td>AMD Radeon HD 7950
-								<tr>
-									<td>MB
-									<td>Asus Crosshair V Formula-Z
-								<tr>
-									<td>RAM
-									<td>16 GB, Crucial Ballistix Tactical
-								<tr>
-									<td>PSU
-									<td>600 Watt
-								<tr>
-									<td>Case
-									<td>Fractal Design Define R4 Pearl Black
-								<tr>
-									<td>SSD
-									<td>Samsung 840 (256 GB, 623 MB/s read, 624 MB/s write)
-								<tr>
-									<td>OS
-									<td>Windows 10 Pro
-							</tbody>
-						</table>
-					<h2>Hyperion (2016)</h2>
-					<p>Hyperion (named after the sun) is my current laptop and I bought it one at the start of my Bachelor's (HBO,
-						for the Duchies) and it has served me well!</p>
-					<p>Right now it serves as third monitor and is being controlled by Zeus' keyboard and mouse, via a program
-						called <a href="https://github.com/debauchee/barrier#barrier">Barrier</a>, as Synergy turned into a paid
-						product a few years ago</p>
-					<p>It's an <a
-							href="https://tweakers.net/pricewatch/484153/asus-zenbook-pro-ux501vw-fj024t/specificaties/">Asus Zenbook
-							Pro UX501VW-FJ024T</a> - you can find more under Zenbook UX501VW, but FJ024T is the specific one I have.
-					</p>
-					<p><strong>Protip 1:</strong> a 2160p (4k) monitor is too small for 16". Yes, it's very sharp, but the 1 meter
-						distance removes the benefit of such a resolution. 1440p would probably be a sweet spot, as 1080p can be
-						pixely.</p>
-					<p><strong>Protip 2:</strong> Make sure to check YouTube if the laptop can get rid of its heat well enough on
-						a longer load (if you need that). Mine starts to throttle like crazy when playing PUBG and World of
-						Warcraft, which means I have to undervolt via <a
-							href="https://downloadcenter.intel.com/download/29183/Intel-Extreme-Tuning-Utility-Intel-XTU-">Intel
-							XTU</a> and/or underclock. This can be done via Windows Powerplan for the CPU and (maybe) MSI Afterburner
-						for the GPU.</p>
-					<p><strong>Protip 3:</strong> Make sure your monitor's brightness is above 400 nits, if possible - 350 nits is
-						OK. Not being able to see your screen because the sun is brighter than your monitor sucks. For reference:
-						<strong>the UX501's monitor is 289 nits</strong>, as per <a
-							href="https://www.laptopmag.com/reviews/laptops/asus-zenbook-pro-ux501">Laptop Mag</a></p>
-				</header>
-				<table>
-					<thead>
-						<tr>
-							<th>Attributes
-							<th>Hyperion
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>CPU
-							<td>6700HQ
-						<tr>
-							<td>Cooler
-							<td>Some crappy-ass single-heatpipe-for-both-CPU-and-GPU laptop-cooler
-						<tr>
-							<td>GPU
-							<td>Nvidia 960m
-						<tr>
-							<td>MB
-							<td>Asus N501VW
-						<tr>
-							<td>RAM
-							<td>16 GB, Unknown
-						<tr>
-							<td>PSU
-							<td>An Asus adapter
-						<tr>
-							<td>Case
-							<td>Zenbook Pro series
-						<tr>
-							<td>SSD
-							<td>Samsung MZVPV512 (512 GB, 1173 MB/s read, 699 MB/s write)
-						<tr>
-							<td>OS
-							<td>Windows 10 Pro
-					</tbody>
-				</table>
-			</div>
+			<h1>PC</h1>
+			<h2 id=zeus-2019>
+				<a href="#zeus-2019" class="self-link"></a>
+				Zeus (2019)
+			</h2>
+			<p>Zeus (the strongest of gods) is my current computer and main machine.</p>
+			<p>I currently use it for programming this site and playing vidya gaems.</p>
+			<table>
+				<thead>
+					<tr>
+						<th>Attributes
+						<th>Zeus
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>CPU
+						<td>8700k
+					<tr>
+						<td>Cooler
+						<td>Noctua NH-D15
+					<tr>
+						<td>GPU
+						<td>Nvidia 1070 Ti
+					<tr>
+						<td>MB
+						<td>Asus ROG Maximus X Hero
+					<tr>
+						<td>RAM
+						<td>16 GB, G.Skill Trident Z RGB F4-4133C17D-16GTZR
+					<tr>
+						<td>PSU
+						<td>1000 Watt
+					<tr>
+						<td>Case
+						<td>Fractal Design Define R6 Tempered Glass Black
+					<tr>
+						<td>SSD
+						<td>Samsung 960 (512 GB, 1516 MB/s read, 1307 MB/s write)
+					<tr>
+						<td>OS
+						<td>Windows 10 Pro
+				</tbody>
+			</table>
+			<h2 id=selene-2013>
+				<a href="#selene-2013" class="self-link"></a>
+				Selene (2013)
+			</h2>
+			<p>Selene (named after the moon) was my old PC and currently functions as backup server (even though it's an
+				old desktop PC)</p>
+			<p>I used to play games on this machine, but it got <em>very</em> frustrating as PUBG (which I played at the
+				time) ran terrible, even on low settings, as the devs kept adding effects which I couldn't disable.</p>
+			<table>
+				<thead>
+					<tr>
+						<th>Attributes
+						<th>Selene
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>CPU
+						<td>FX-8320E
+					<tr>
+						<td>Cooler
+						<td>Cooler Master Hyper 212 Black Edition
+					<tr>
+						<td>GPU
+						<td>AMD Radeon HD 7950
+					<tr>
+						<td>MB
+						<td>Asus Crosshair V Formula-Z
+					<tr>
+						<td>RAM
+						<td>16 GB, Crucial Ballistix Tactical
+					<tr>
+						<td>PSU
+						<td>600 Watt
+					<tr>
+						<td>Case
+						<td>Fractal Design Define R4 Pearl Black
+					<tr>
+						<td>SSD
+						<td>Samsung 840 (256 GB, 623 MB/s read, 624 MB/s write)
+					<tr>
+						<td>OS
+						<td>Windows 10 Pro
+				</tbody>
+			</table>
+			<h2 id=hyperion-2016>
+				<a href="#hyperion-2016" class="self-link"></a>
+				Hyperion (2016)
+			</h2>
+			<p>Hyperion (named after the sun) is my current laptop and I bought it one at the start of my Bachelor's (HBO,
+				for the Duchies) and it has served me well!</p>
+			<p>Right now it serves as third monitor and is being controlled by Zeus' keyboard and mouse, via a program
+				called <a href="https://github.com/debauchee/barrier#barrier">Barrier</a>, as Synergy turned into a paid
+				product a few years ago</p>
+			<p>It's an <a href="https://tweakers.net/pricewatch/484153/asus-zenbook-pro-ux501vw-fj024t/specificaties/">Asus
+					Zenbook
+					Pro UX501VW-FJ024T</a> - you can find more under Zenbook UX501VW, but FJ024T is the specific one I have.
+			</p>
+			<p><strong>Protip 1:</strong> a 2160p (4k) monitor is too small for 16". Yes, it's very sharp, but the 1 meter
+				distance removes the benefit of such a resolution. 1440p would probably be a sweet spot, as 1080p can be
+				pixely.</p>
+			<p><strong>Protip 2:</strong> Make sure to check YouTube if the laptop can get rid of its heat well enough on
+				a longer load (if you need that). Mine starts to throttle like crazy when playing PUBG and World of
+				Warcraft, which means I have to undervolt via <a
+					href="https://downloadcenter.intel.com/download/29183/Intel-Extreme-Tuning-Utility-Intel-XTU-">Intel
+					XTU</a> and/or underclock. This can be done via Windows Powerplan for the CPU and (maybe) MSI Afterburner
+				for the GPU.</p>
+			<p><strong>Protip 3:</strong> Make sure your monitor's brightness is above 400 nits, if possible - 350 nits is
+				OK. Not being able to see your screen because the sun is brighter than your monitor sucks. For reference:
+				<strong>the UX501's monitor is 289 nits</strong>, as per <a
+					href="https://www.laptopmag.com/reviews/laptops/asus-zenbook-pro-ux501">Laptop Mag</a></p>
+			<table>
+				<thead>
+					<tr>
+						<th>Attributes
+						<th>Hyperion
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>CPU
+						<td>6700HQ
+					<tr>
+						<td>Cooler
+						<td>Some crappy-ass single-heatpipe-for-both-CPU-and-GPU laptop-cooler
+					<tr>
+						<td>GPU
+						<td>Nvidia 960m
+					<tr>
+						<td>MB
+						<td>Asus N501VW
+					<tr>
+						<td>RAM
+						<td>16 GB, Unknown
+					<tr>
+						<td>PSU
+						<td>An Asus adapter
+					<tr>
+						<td>Case
+						<td>Zenbook Pro series
+					<tr>
+						<td>SSD
+						<td>Samsung MZVPV512 (512 GB, 1173 MB/s read, 699 MB/s write)
+					<tr>
+						<td>OS
+						<td>Windows 10 Pro
+				</tbody>
+			</table>
 		</section>
 	</main>
 
