add text to emoji project

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -176,11 +176,9 @@
 						<h3>Encode</h3>
 						<label>input:<textarea id=base64_in_encode></textarea></label>
 						<label>output - click to copy to clipboard:<textarea id=base64_out_encode readonly></textarea></label>
-
 						<h3>Decode</h3>
 						<label>input:<textarea id=base64_in_decode></textarea></label>
 						<label>output - click to copy to clipboard:<textarea id=base64_out_decode readonly></textarea></label>
-
 						<script type=module src=/projects/scripts/base64.mjs></script>
 					</section>
 
@@ -234,6 +232,23 @@ fetch('https://hacker-news.firebaseio.com/v0/user/NostraDavid.json')
 									});
 							}
 						</script>
+					</section>
+				</details>
+			</section>
+
+			<section>
+				<details>
+					<summary>
+						<h3>Text to Emoji</h3>
+					</summary>
+					<section>
+						<h3>Encode</h3>
+						<label>input:<textarea id=t2e-in-encode></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=t2e-out-encode readonly></textarea></label>
+						<h3>Decode</h3>
+						<label>input:<textarea id=t2e-in-decode></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=t2e-out-decode readonly></textarea></label>
+						<script type=module src=/projects/scripts/t2e.mjs></script>
 					</section>
 				</details>
 			</section>
