add Germanizer project
I can now 𝔊𝔢𝔯𝔪𝔞𝔫𝔦𝔷𝔢 my text! :D

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -252,6 +252,23 @@ fetch('https://hacker-news.firebaseio.com/v0/user/NostraDavid.json')
 					</section>
 				</details>
 			</section>
+
+			<section>
+				<details open>
+					<summary>
+						<h3>Germanizer</h3>
+					</summary>
+					<section>
+						<h3>Encode</h3>
+						<label>input:<textarea id=germanizer-in-encode></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=germanizer-out-encode readonly></textarea></label>
+						<h3>Decode</h3>
+						<label>input:<textarea id=germanizer-in-decode></textarea></label>
+						<label>output - click to copy to clipboard:<textarea id=germanizer-out-decode readonly></textarea></label>
+						<script type=module src=/projects/scripts/germanizer.mjs></script>
+					</section>
+				</details>
+			</section>
 		</section>
 	</main>
 
