fix Germanizer decoding

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -254,7 +254,7 @@ fetch('https://hacker-news.firebaseio.com/v0/user/NostraDavid.json')
 			</section>
 
 			<section>
-				<details open>
+				<details>
 					<summary>
 						<h3>Germanizer</h3>
 					</summary>
