add linguistic cleansing bit on the About page

--- a/pages/about.html
+++ b/pages/about.html
@@ -164,6 +164,12 @@
 				numbers they did not need to adapt to our netizenship and changed our internet culture. <em>For the worse</em>,
 				mind you. I hope to one day have enough influence to change that, for the betterment of humanity.</p>
 		</section>
+		<section>
+			<h2>Linguistic Cleansing pisses me the fuck off</h2>
+			<p>More virtue signalling, this time coming out of the Linux community...</p>
+			<blockquote>avoid introducing new usage of ‘master / slave’ (or ‘slave’ independent of ‘master’) and ‘blacklist / whitelist’</blockquote>
+			<p><a href="https://www.kernel.org/doc/html/latest/process/coding-style.html#naming">source</a></p>
+		</section>
 	</main>
 
 	<footer>
