--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+					<li><time>2020-07-15</time> Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</li>
 					<li><time>2020-07-13</time> Improve the Issue page on GitHub by adding a template.</li>
 					<li><time>2020-07-13</time> move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</li>
 					<li><time>2020-07-07</time> Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code>
