add Knowledge Base

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 		<span> - </span>
 		<a href=/pages/hardware.html>Hardware</a>
 		<span> - </span>
+		<a href=/pages/knowledge-base.html>Knowledge Base</a>
+		<span> - </span>
 		<a href=/pages/about.html>About</a>
 	</nav>
 
