--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+					<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
+					<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
 					<li><time>2020-07-15</time> Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</li>
 					<li><time>2020-07-13</time> Improve the Issue page on GitHub by adding a template.</li>
 					<li><time>2020-07-13</time> move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</li>
