--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
+					<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch saying/adage/proverb/aphorism</li>
 					<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
 					<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
 					<li><time>2020-07-15</time> Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</li>
