--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -65,7 +65,8 @@
 		<section>
 			<h2>Knowledge base</h2>
 			<p>For now (2020-07-16) it's just snippets of JS and regex that I use every now and then</p>
-			<p>I'd use GitHub for that, but I have a tendency to forget <a href="https://gist.github.com/NostraDavid">GitHub Gist</a> exists&hellip;</p>
+			<p>I'd use GitHub for that, but I have a tendency to forget <a href="https://gist.github.com/NostraDavid">GitHub
+					Gist</a> exists&hellip;</p>
 			<section>
 				<details open>
 					<summary>
@@ -77,14 +78,72 @@
 								<th> note
 								<th> code
 							<tr>
-								<td> Open all collapsed comments
-								<td> <code>document.querySelectorAll(".expand").forEach(el => { if (el.innerText == "[+]") { el.click(); } });</code>
+								<td> Open all collapsed comments on a reddit comment page
+								<td>
+									<pre><code>document.querySelectorAll(".expand")
+				.forEach(el => {
+					if (el.innerText == "[+]") {
+						el.click();
+					}
+				});</code></pre>
 							<tr>
-								<td>Manipulating Unicode strings per code point, not per byte
-								<td><code>Array.from("𝔱𝔢𝔰𝔱𝔦𝔫𝔤 𝔗𝔈𝔖𝔗 #@$%#^$% 𝔱𝔢𝔰𝔱𝔦𝔫𝔤 𝔗𝔈𝔖𝔗").map(letter => {});</code>
+								<td>Manipulating Unicode strings per code point, not per byte. <code>"".split()</code> gives you bytes, not codepoints
+								<td>
+									<code>Array.from("𝔱𝔢𝔰𝔱𝔦𝔫𝔤 𝔗𝔈𝔖𝔗 #@$%#^$% 𝔱𝔢𝔰𝔱𝔦𝔫𝔤 𝔗𝔈𝔖𝔗");</code>
 							<tr>
-								<td>Remove all <code>.bighead</code> classed elements (no Array.from() needed, which is what I used before, so I could use map() instead of a for loop)
-								<td><code>document.querySelectorAll(".bighead").forEach(el => el.parentElement.removeChild(el));</code>
+								<td>Remove all <code>.bighead</code> classed elements (no Array.from() needed, which is what I used
+									before, so I could use map() instead of a for loop)
+								<td>
+									<pre><code>document.querySelectorAll(".bighead")
+				.forEach(el => {
+					el.parentElement
+						.removeChild(el)
+					});</code></pre>
+							<tr>
+								<td>Make console.log use colors
+								<td>
+									<pre>
+<code>const CONSOLE_STYLE = "background: #800; color: #fff; padding: 2px";
+console.log('%cService worker installing', CONSOLE_STYLE);</code>
+</pre>
+							<tr>
+								<td>This opens all <code>are you sure?</code> dialogs for comments, on a profile page of Reddit
+								<td>
+									<pre><code>let ys = Array.from(document.getElementsByClassName("score likes"))
+							.filter(e => parseInt(e.title) < 3)
+							.map(e => e.parentElement.parentElement.parentElement)
+							.map(el => el.querySelector(`[data-event-action*="delete"]`));
+// pick everything after the 77th comment
+ys = ys.slice(77, ys.length - 1);
+ys.map(e => e.click());</code></pre>
+							<tr>
+								<td>Removing duplicates
+								<td>
+									<pre><code>const cities = ["Den Haag","Den Haag",
+								"Utrecht", "Utrecht",
+								"Arnhem", "Arnhem",
+								"MiddelBurg", "MiddelBurg",
+								"MiddelBurg"];
+const uniqueCities = [...new Set(cities)];
+// ["Den Haag", "Utrecht", "Arnhem", "MiddelBurg"]</code></pre>
+							<tr>
+								<td>Run a timed loop (handy for interacting with Reddit, because Reddit has a rate limit of 30 requests per minute)
+								<td>
+									<pre><code>let xs = document.querySelectorAll("[query goes here]");
+let i = 0;
+let id = setInterval(() => {console.log(i); xs[i].click(); i++;}, 1100);
+clearInterval(id);</code></pre>
+							<tr>
+								<td> Remove all comments from a specific subreddit (TheLastOfUs2, in this case)
+								<td>
+									<pre><code>Array.from(document.getElementsByClassName("subreddit hover"))
+									 .filter(el => el.innerHTML == "TheLastOfUs2")
+									 .map(el => el.parentElement.parentElement)
+									 .map(el => {
+										 // subselection apparently works
+										 el.querySelector(`[data-event-action*="delete"]`)
+									 })
+									 .map(el => el.click());</code></pre>
 						</tbody>
 					</table>
 				</details>
