add time element where needed

--- a/pages/knowledge-base.html
+++ b/pages/knowledge-base.html
@@ -64,7 +64,7 @@
 	<main>
 		<section>
 			<h2>Knowledge base</h2>
-			<p>For now (2020-07-16) it's just snippets of JS and regex that I use every now and then</p>
+			<p>For now (<time>2020-07-16</time>) it's just snippets of JS and regex that I use every now and then</p>
 			<p>I'd use GitHub for that, but I have a tendency to forget <a href="https://gist.github.com/NostraDavid">GitHub
 					Gist</a> exists&hellip;</p>
 			<section>
