<strong>ed wrong Changelog item

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 	<meta name="twitter:image:width" content="1280" />
 	<meta name="twitter:image:height" content="668" />
 
-	<script data-ad-client="ca-pub-7577528621475749" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script data-ad-client="ca-pub-7577528621475749" async
+		src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -139,8 +140,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				<p>Initially things changed too drastically and too fast to keep a changelog, but I think it's time for one.</p>
 				<p>Everything previous the creation of this list has been copied from the Git history.</p>
 				<ul>
-					<li><time>2020-07-16</time> Added Changelog to frontpage</li>
-					<li><time>2020-07-16</time> <strong>Added Knowledge Base page</strong></li>
+					<li><time>2020-07-16</time> <strong>Added Changelog to frontpage</strong></li>
+					<li><time>2020-07-16</time> Added Knowledge Base page</li>
 					<li><time>2020-07-15</time> Created 𝔊𝔢𝔯𝔪𝔞𝔫𝔦𝔷𝔢𝔯 (Germanizer) project</li>
 					<li><time>2020-07-15</time> Created Text to Emoji project</li>
 					<li><time>2020-07-13</time> Added Hardware page</li>
@@ -148,28 +149,39 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 					<li><time>2020-07-07</time> Titles are now linkable (via a hash in the URL/section sign (§) combo)</li>
 					<li><time>2020-07-07</time> TODO now has timestamps</li>
 					<li><time>2020-07-06</time> Added <a href="https://talk.hyvor.com/">Hyvor</a> comment system to frontpage</li>
-					<li><time>2020-07-04</time> Added Google Analytics to the site (With a cookie notification. Wish I didn't need it, but they're legally required)</li>
+					<li><time>2020-07-04</time> Added Google Analytics to the site (With a cookie notification. Wish I didn't need
+						it, but they're legally required)</li>
 					<li><time>2020-07-03</time> Added footer links</li>
-					<li><time>2020-07-03</time> Added metadata to the frontpage for Facebook and Twitter, so when posting a link to FB/T you get a nice looking card</li>
+					<li><time>2020-07-03</time> Added metadata to the frontpage for Facebook and Twitter, so when posting a link
+						to FB/T you get a nice looking card</li>
 					<li><time>2020-07-02</time> Added Random Video page (it contains a few of my favorite videos)</li>
-					<li><time>2020-07-01</time> Added an image of the most important person since the existence of nations to the GitHub repo</li>
+					<li><time>2020-07-01</time> Added an image of the most important person since the existence of nations to the
+						GitHub repo</li>
 					<li><time>2020-07-01</time> Added Reddit's T-values article</li>
 					<li><time>2020-06-30</time> Added /g/'s programming projects article</li>
 					<li><time>2020-06-12</time> (Static) sitemap available</li>
 					<li><time>2020-06-11</time> 404 page now has search and archive functionality added</li>
-					<li><time>2020-06-11</time> Added PWA functionality! Site can now be used, even if you don't have any internet connection available!</li>
+					<li><time>2020-06-11</time> Added PWA functionality! Site can now be used, even if you don't have any internet
+						connection available!</li>
 					<li><time>2020-06-11</time> Added Experimentations page</li>
-					<li><time>2020-05-09</time> Added old articles from <a href="https://thaumatorium.wordpress.com/">my old blog</a></li>
+					<li><time>2020-05-09</time> Added old articles from <a href="https://thaumatorium.wordpress.com/">my old
+							blog</a></li>
 					<li><time>2020-05-09</time> Added Slugify project</li>
 					<li><time>2020-05-09</time> Added Starfield project</li>
 					<li><time>2020-05-09</time> Added <abbr title="Mocking Spongebob Text Generator">MSTG</abbr> project</li>
 					<li><time>2020-05-09</time> Added ROT13 project</li>
-					<li><time>2020-05-09</time> Added history images, for Thaumatorium.com and a SON experiment, to the repo (but not the site)</li>
-					<li><time>2020-05-09</time> Added extension recommendations for when you open the <code>thaumatorium.github.io</code> folder (for when you download the repo)</li>
-					<li><time>2020-05-03</time> Replaced the bare Elm version of this site with the static HTML - including some easter eggs :^)</li>
-					<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/">HTML Living Standard</a> and most of the <a href="https://www.w3.org/TR/CSS/#css">CSS spec</a> (that's CSS 2.1 + the separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
+					<li><time>2020-05-09</time> Added history images, for Thaumatorium.com and a SON experiment, to the repo (but
+						not the site)</li>
+					<li><time>2020-05-09</time> Added extension recommendations for when you open the
+						<code>thaumatorium.github.io</code> folder (for when you download the repo)</li>
+					<li><time>2020-05-03</time> Replaced the bare Elm version of this site with the static HTML - including some
+						easter eggs :^)</li>
+					<li>Between these times I've read the <a href="https://html.spec.whatwg.org/multipage/">HTML Living
+							Standard</a> and most of the <a href="https://www.w3.org/TR/CSS/#css">CSS spec</a> (that's CSS 2.1 + the
+						separate 'blocks' that either replace or add to CSS 2.1 - that's CSS 3, basically)</li>
 					<li><time>2019-10-24</time> Got the Elm version of the site working</li>
-					<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static <code>index.html</code></li>
+					<li><time>2019-09-27</time> Creation of the repo that hosts this site with a very simple static
+						<code>index.html</code></li>
 
 				</ul>
 			</section>
@@ -180,12 +192,17 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 				</h2>
 				<p>The date you see is <q>date created</q>, not <q>edited</q> or <q>done</q></p>
 				<ul>
-					<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch saying/adage/proverb/aphorism</li>
-					<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated browser (you can always check your browser's About menu)</li>
+					<li><time>2020-07-16</time> Add a "saying of the refresh" where there's a translated Dutch
+						saying/adage/proverb/aphorism</li>
+					<li><time>2020-07-16</time> Add a notification for unsupported browsers. This site assumes you have an updated
+						browser (you can always check your browser's About menu)</li>
 					<li><time>2020-07-16</time> Create an article where I explain which vscode extensions that I use and why.</li>
-					<li><time>2020-07-15</time> Create a knowledge page and move certain articles into it - certain articles are just too short to be a separate page, IMO.</li>
+					<li><time>2020-07-15</time> Create a knowledge page and move certain articles into it - certain articles are
+						just too short to be a separate page, IMO.</li>
 					<li><time>2020-07-13</time> Improve the Issue page on GitHub by adding a template.</li>
-					<li><time>2020-07-13</time> move the <code>id</code> from the <code>h2/h3</code> into the <code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>, IMO.</li>
+					<li><time>2020-07-13</time> move the <code>id</code> from the <code>h2/h3</code> into the
+						<code>&lt;section&gt;</code> elements - this should improve the semantics of <code>&lt;section&gt;</code>,
+						IMO.</li>
 					<li><time>2020-07-07</time> Add <code>&lt;a href="#todo" class="self-link"&gt;&lt;/a&gt;</code>
 						to basically all headers.</li>
 					<li><time>2020-07-07</time> Spread the OGP and Twitter card metadata around the other html files</li>
@@ -228,8 +245,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 							sure to include the <a href=https://en.wikipedia.org/wiki/Sitemaps#Element_definitions>necessary
 								tags</a></del></li>
 					<li><time>2020-05-09</time> <del>Make thaumatorium.com look good</del></li>
-					<li><time>2020-05-09</time> <del>Transfer my articles from my <a
-								href=https://thaumatorium.wordpress.com>ye olde wordpress</a>
+					<li><time>2020-05-09</time> <del>Transfer my articles from my <a href=https://thaumatorium.wordpress.com>ye
+								olde wordpress</a>
 							site</del></li>
 				</ul>
 			</section>
@@ -262,7 +279,8 @@ For more information: https://www.w3.org/International/questions/qa-html-encodin
 
 				<figure style="display: inline-block">
 					<h3>Want to use the same style of comments for your site?</h3>
-					Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor 30% will be passed onto me!
+					Use my <a href="https://talk.hyvor.com?aff=5844">referral link</a> to sign up! <em>If</em> you then pay Hyvor
+					30% will be passed onto me!
 				</figure>
 			</section>
 			<section>
